[package]
name = "mind-term"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "???"
homepage = "https://github.com/phaazon/mind"
repository = "https://github.com/phaazon/mind"
#documentation = "https://docs.rs/mind-editor"
readme = "README.md"
edition = "2021"
rust-version = "1.66.0"

[[bin]]
name = "mind"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dirs = "4.0.0"
mind = { path = "../mind", version = "0.1" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.38"
