[package]
name = "mind-tree-tui"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
license = "BSD-3-Clause"
description = "Organize your thoughts in a tree-like structure"
homepage = "https://github.com/phaazon/mind"
repository = "https://github.com/phaazon/mind"
edition = "2021"
rust-version = "1.66.0"

[[bin]]
name = "mind-tui"
path = "src/main.rs"

[dependencies]
crossterm = "0.26.1"
log = "0.4.19"
mind-tree = { version = "0.1.2-dev", path = "../mind" }
stderrlog = "0.5.4"
thiserror = "1.0.40"
tui = "0.19.0"

