[package]
name = "mind"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "???"
homepage = "https://github.com/phaazon/mind"
repository = "https://github.com/phaazon/mind"
#documentation = "https://docs.rs/mind-editor"
readme = "README.md"
edition = "2021"
rust-version = "1.66.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.38"

[dev-dependencies]
serde_json = "1.0.94"
