[package]
name = "mind-tree"
version = "0.1.2-dev"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
license = "BSD-3-Clause"
description = "Organize your thoughts in a tree-like structure"
homepage = "https://github.com/phaazon/mind"
repository = "https://github.com/phaazon/mind"
documentation = "https://docs.rs/mind-tree"
edition = "2021"
rust-version = "1.66.0"

[dependencies]
dirs = "5.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.38"
toml = "0.7.3"

[dev-dependencies]
serde_json = "1.0.94"
